# unbox_use_detectron2_model_in_cpp_of_caffe2

./: .gitignore  README.md
cpp_project/: CMakeLists.txt  caffe2_mask_rcnn.cpp
python_project/: caffe2_converter.py
python_project/images/train/: via_region_data.json
python_project/weights/: download_and_save-model_0124999_pth-file_here.txt
